--- a/scss/components/_AllAnalyses.scss
+++ b/scss/components/_AllAnalyses.scss
@@ -8,7 +8,9 @@
 .all-analyses {
     justify-content: center;
     .youtube-thumbnail {
-        margin: 1em;
+        @media (min-width: $mq-mobile-s) {
+            margin: 1em;
+        }
     }
     display: flex;
     flex-wrap: wrap;
